--- a/men.html
+++ b/men.html
@@ -89,13 +89,12 @@
                     сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.
                 </p>
 
-                <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br> Кстати, менять качества своего характера - это реально.
-                    <ul>
-                        <li>А Вы уже знаете себя?</li>
-                        <li>Кто Вы? </li>
-                       
-                    </ul>
-                </p>
+                <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. </p>
+                <p> Кстати, менять качества своего характера - это реально.</p>
+                <ul>
+                    <li>А Вы уже знаете себя?</li>
+                    <li>Кто Вы? </li>
+                </ul>
 
                 <div class="video-container">
                     <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
@@ -144,7 +143,7 @@
 
 
             <a href="tel:+380638587378 ">
-                <img class="tel " src="icons/button-telephone-icon.png" alt="+380638587378 ">
+                <img class="tel" src="icons/button-telephone-icon.png" alt="+380638587378 ">
             </a>
 
 
@@ -153,7 +152,7 @@
             <div class="name">ARKADIY_GYM</div>
 
         </div>
-        
+
     </footer>
 </body>
 
