--- a/men.html
+++ b/men.html
@@ -84,7 +84,8 @@
                 <p> Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания
                     и комфортной жизни.<br>
                 </p>
-                <img class="photo-home-train" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378"> Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. </p>
+                <img class="photo-home-train" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378">
+                <p>Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. </p>
                 <p>Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется
                     сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.
                 </p>
