--- a/pt.home.html
+++ b/pt.home.html
@@ -80,30 +80,29 @@
 
             <div class="kdb">
 
+                <h1>Тренер на дом</h1>
+
+
+                Персональный тренер на дом - это относительно новая услуга на рынке фитнеса которая появилась для решения ряда препятствий на пути к здоровью, красоте и достижению спортивных результатов.
+                <img class="photo-home-train" src="img/boutique-gym.jpg" alt="персональный тренер Киев 0638587378"> Как правило, занятия в домашних условиях могут быть актуальны в связи с:<br>
+                <ul>
+                    <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li>
+                    <li>-в случае высокой занятости - экономия времени.</li>
+                    <li>-особенности образа жизни - невозможность или нежелание появляться на людях.</li>
+                    <li>-трудности с передвижением по городу - решение проблемы мобильности.</li>
+                    <li>-невозможность покинуть дом (декрет например).</li>
+                    <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал.</li>
+                </ul>
                 <p>
-                    <h1>Тренер на дом</h1>
+                    При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p>
 
-
-                    Персональный тренер на дом - это относительно новая услуга на рынке фитнеса которая появилась для решения ряда препятствий на пути к здоровью, красоте и достижению спортивных результатов.
-                    <img class="photo-home-train" src="img/boutique-gym.jpg" alt="персональный тренер Киев 0638587378"> Как правило, занятия в домашних условиях могут быть актуальны в связи с:<br>
-                    <ul>
-                        <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li><br>
-                        <li>-в случае высокой занятости - экономия времени.</li><br>
-                        <li>-особенности образа жизни - невозможность или нежелание появляться на людях.</li><br>
-                        <li>-трудности с передвижением по городу - решение проблемы мобильности.</li><br>
-                        <li>-невозможность покинуть дом (декрет например).</li><br>
-                        <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал.</li>
-                    </ul>
-                    При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!
-
-                    <br>Воспользовавшись услугой тренер на дом Вы платите только за тренировки, а для занятий в фитнес-клубе Вам приходится так же приобретать абонемент. Существует так-же ряд преград для домашних тренировок.
-                    <br>В первую очередь это нехватка оборудования. Тут все зависит от цели занятий. Большинства поставленных целей уже можно достичь с оборудованием которое специально для этого случая возьмет наставник. К тому же, опытный инструктор
-                    сможет провести Вам эффективную тренировку упражнениями в которых дополнительный инвентарь не нужен. Если Вы хотите снизить лишний вес, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы
-                    в домашних условиях. Желаете снизить вес - услуга домашний тренер для похудения особенно актуальна, послольку для достижения такой цели важно не только заниматься, наставник сможет ознакомиться с Вашей средой обитания и тактично внести
-                    коррективы в Ваш образ жизни, что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
-                    <p>Стоимость тренировки на дому по Киеву 500грн/час/чел<br> Пригород Киева 700грн/час/чел
-
-                    </p>
+                <p> Воспользовавшись услугой тренер на дом Вы платите только за тренировки, а для занятий в фитнес-клубе Вам приходится так же приобретать абонемент. Существует так-же ряд преград для домашних тренировок.</p>
+                <p> В первую очередь это нехватка оборудования. Тут все зависит от цели занятий. Большинства поставленных целей уже можно достичь с оборудованием которое специально для этого случая возьмет наставник. К тому же, опытный инструктор сможет провести
+                    Вам эффективную тренировку упражнениями в которых дополнительный инвентарь не нужен. Если Вы хотите снизить лишний вес, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.
+                    Желаете снизить вес - услуга домашний тренер для похудения особенно актуальна, послольку для достижения такой цели важно не только заниматься, наставник сможет ознакомиться с Вашей средой обитания и тактично внести коррективы в Ваш
+                    образ жизни, что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
+                    <p>Стоимость тренировки на дому по Киеву 500грн/час/чел</p>
+                    <p> Пригород Киева 700грн/час/чел</p>
             </div>
         </div>
     </div>
