--- a/TRX.html
+++ b/TRX.html
@@ -96,8 +96,8 @@
                     Успех TRX тренировок в том, что у этой системы почти нет противопоказаний. TRX тренировки в Киеве могут посещать взрослые и дети. Во время занятий почти нет никакой нагрузки на позвоночник! Для занятий в фитнес- клубах используют TRX петли. TRX петли
                     это два эластичных ремня, концы которых снабжены удобными рукоятками. Несмотря на простоту TRX тренажеров, петли TRX могут выдерживать до 180 кг.
                 </p>
-                <p>
-                    <h3>TRX петли</h3> идеальный тренажер для занятий дома. Вам потребуется лишь закрепить его. Но не торопитесь покупать TRX петли. TRX занятия дадут замечательный результат, если правильно выполнять упражнения. Какая должна быть поза, как
+                
+                    <h3>TRX петли</h3><p>идеальный тренажер для занятий дома. Вам потребуется лишь закрепить его. Но не торопитесь покупать TRX петли. TRX занятия дадут замечательный результат, если правильно выполнять упражнения. Какая должна быть поза, как
                     держать руки, как поставить ноги – все это вам должен показать инструктор. Он же должен следить за тем как вы выполняете упражнения, подсказать, когда и как можно увеличить нагрузку, провести разминку перед занятиями. Занятия на петлях
                     TRX проходят для новичков, для людей среднего уровня физической подготовки и для подготовленных спортсменов. Занятия должны быть безопасными и доставлять пользу и удовольствие. Поэтому мы всегда настаиваем, чтобы перед выбором того
                     или иного вида тренировок, Тренировки на петлях TRX это способ не только похудеть и поддерживать тело в хорошей физической форме, но и развить ловкость и гибкость.
@@ -127,7 +127,7 @@
             <div class="name">ARKADIY_GYM</div>
 
         </div>
-        </div>
+        
 
     </footer>
 </body>
