--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="ru">
 
 <head>
+    <meta charset=utf-8>
+    <title>Персональный тренер Киев</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/media.css" type="text/css" media="all and (max-width:900px)">
+</head>
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки с персональным фитнес тренером</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
