--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="styles.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/media.css" type="text/css" media="all and (max-width:900px)">
 </head>
 
@@ -20,8 +19,7 @@
 
 
 
-
-<body>
+ody>
     <header class="header">
         <nav class="dws-menu">
             <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
