--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-ody>
+<body>
     <header class="header">
         <nav class="dws-menu">
             <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
