--- a/index.html
+++ b/index.html
@@ -1,119 +1,72 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 
 <head>
-    <meta charset=utf-8>
-    <title>Персональный тренер Киев</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/media.css" type="text/css" media="all and (max-width:900px)">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Тренировки с персональным фитнес тренером</title>
+    <link href="block.css" rel="stylesheet" />
 </head>
-
-
-
-
 
 <body>
     <header class="header">
-        <nav class="dws-menu">
-            <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
-            <label for="menu" class="toggleMenu"></i>Меню</label>
-            <ul>
-                <li>
-                    <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-                    <a href="#"></i>Услуги</a>
-                    <label for="sub_m2" class="toggleSubmenu"></i></label>
-                    <ul>
-                        <li><a href="TRX.html">TRX - тренировки</a></li>
-                        <li><a href="men.html">Мужской тренинг</a></li>
-                        <li><a href="women.html">Тренировки для девушек</a></li>
-                        <li><a href="pt.home.html">Тренер на дом</a></li>
-                        <li><a href="lose weight.html">Похудеть</a></li>
-                        <li><a href="group">Групповые тренировки</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="lose weight.html">Похудеть</a>
-                </li>
-                <li>
-                    <a href="about me.html"></i>О себе</a>
-                </li>
-                <li>
-                    <a href="contacts.html"></i>Контакты</a>
-                </li>
-                <li>
-                    <a href="index.html"></i>Главная</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="white-block">
+
+
+
+
+
+
+            <nav class="dws-menu">
+                <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
+                <label for="menu" class="toggleMenu"></i>Меню</label>
+
+
+                <ul>
+
+                    <li>
+                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
+                        <a href="#"></i>Услуги</a>
+                        <label for="sub_m2" class="toggleSubmenu"></i></label>
+                        <ul>
+                            <li><a href="TRX.html">TRX - тренировки</a></li>
+                            <li><a href="men.html">Мужской тренинг</a></li>
+                            <li><a href="women.html">Тренировки для девушек</a></li>
+                            <li><a href="pt.home.html">Тренер на дом</a></li>
+                            <li><a href="lose weight.html">Похудеть</a></li>
+                            <li><a href="group">Групповые тренировки</a></li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="lose weight.html">Похудеть</a>
+                    </li>
+                    <li>
+                        <a href="about me.html"></i>О себе</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html"></i>Контакты</a>
+                    </li>
+                    <li>
+                        <a href="index.html"></i>Главная</a>
+                    </li>
+
+
+                </ul>
+            </nav>
+        </div>
         <div class="gray-block">
-            <div class="name">fitnesstrener.kiev</div>
-            <h4>Фитнес тренер Киев</h4>
+            <div class="name">ARKADIY_GYM</div>
+            <h4>FITNES BLOG & STORE</h4>
         </div>
+
     </header>
-    <wrapper>
-        <div id="dws-slider" class="carousel slide" data-ride="carousel">
-            <!--Показатели-->
-            <ol class="carousel-indicators">
-                <li data-target="#dws-slider" data-slide-to="0" class="active"></li>
-                <li data-target="#dws-slider" data-slide-to="1"></li>
-                <li data-target="#dws-slider" data-slide-to="2"></li>
-            </ol>
-
-            <!--Обертка для слайдов-->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active"><img src="img/4.jpg" alt="Картинка 1">
-                    <div class="carousel-caption">
-                        <h3 class="text-uppercase">Разработка сайтов</h3>
-                        <p>Создаем одностраничные и многостраничные сайты. Акция: одностраничный сайт, на одну позицию товаров (услуг) за 1500грн.</p>
-                    </div>
-                </div>
-                <div class="item"><img src="img/2.jpg" alt="Картинка 2">
-                    <div class="carousel-caption">
-                        <h3 class="text-uppercase">Анимированная прокрутка</h3>
-                        <p>Aenean cursus imperdiet erat sit amet facilisis. Phasellus congue, sem in consectetur accumsan, tellus risus sollicitudin mauris, quis ornare libero magna eget ex.</p>
-                    </div>
-                </div>
-                <div class="item"><img src="img/3.jpg" alt="Картинка 3">
-                    <div class="carousel-caption">
-                        <h3 class="text-uppercase">Простая установка</h3>
-                        <p>Praesent dictum, orci eget eleifend auctor, urna ex dapibus odio, vitae pretium neque massa vel neque. Donec et interdum diam. Morbi dignissim vestibulum mi ac viverra.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!--Элементы управления-->
-            <a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </wrapper>
-    <script>
-        $('.carousel').carousel({
-            interval: 6000
-        })
-    </script>
-
-
-
-
 
 
     <div id="content">
 
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/4m.png" alt="персональный тренер Киев 0638587378">
+            <img class="photo" src="img/ohern.png" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
@@ -194,20 +147,19 @@
             </div>
         </div>
     </div>
-    <footer id="footer">
-        <div class="black-block">
-            <nav class="menu_footer">
-                <a href="about_me.html">О себе</a>
-                <a href="contacts.html">Контакты</a>
-                <a href="index.html">Главная</a>
-            </nav>
-            <p class="number">+380638587378</p>
-            <a href="tel:+380638587378">
-                <img class="tel" src="icons/button-telephone-icon.png" alt="+380638587378">
-            </a>
-            <div class="name">ARKADIY_GYM</div>
-        </div>
-    </footer>
-</body>
+    <div id="footer">
 
-</html>
+        <div class="icons">
+            <a href="viber:+380935809669">
+                <mg class="viber" src="/icons/Viber.png" alt="+380935809669">
+            </a>
+            <a href="whatsapp:+79779886018">
+                <mg class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018">
+            </a>
+            <a href="tel:+380638587378">
+                <img class="tel" src="/icons/button-telephone-icon.png" alt="+380638587378">
+            </a>
+        </div>
+    </div>
+
+</body>
