--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки с персональным фитнес тренером</title>
     <link href="style.css" rel="stylesheet" />
 </head>
-
 <body>
     <header class="header">
         <div class="white-block">
-
-
-
-
-
-
             <nav class="dws-menu">
                 <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
                 <label for="menu" class="toggleMenu"></i>Меню</label>
-
-
                 <ul>
-
                     <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
                         <a href="#"></i>Услуги</a>
@@ -37,7 +26,6 @@
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
-
                     <li>
                         <a href="lose weight.html">Похудеть</a>
                     </li>
@@ -50,8 +38,6 @@
                     <li>
                         <a href="index.html"></i>Главная</a>
                     </li>
-
-
                 </ul>
             </nav>
         </div>
@@ -59,23 +45,14 @@
             <div class="name">ARKADIY_GYM</div>
             <h4>FITNES BLOG & STORE</h4>
         </div>
-
     </header>
-
-
     <div id="content">
-
         <div class="coach d-flex justify-content-around">
             <img class="photo" src="img/ohern.png" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
-
             <div class="kdb">
-
                 <p>
-
-
                     <h2>Зачем вообще заниматься своим телом?</h2>
-
                     <p>Все органы и ткани человека, как и любого другого живого существа состоят из клеток. В этих клетках постоянно происходят какие-то процессы. Что-то обновляется, какие-то элементы отработали свой цыкл и разрушаются, на смену им образуются
                         другие элементы. Таким образом, каждая клетка в теле нуждается в своевременном выведении продуктов распада и в доставке новых макро и микропитательных веществ и кислорода. Если продукты распада клеточной жизнедеятельности не выводятся
                         и вовремя не доставляются питательные вещества занчит нарушена транспортная функция (ее в нашем теле выполняет сердечно-сосудистая и лимфатическая системы).<br>
@@ -87,12 +64,9 @@
                         <li>
                             2. Поддерживать транспортную функцию, чтоб питательные вещества и кислород были вовремя доставлены к месту назначения, а продукты распада выводились из тела прежде чем своим присутствием начнут мешать жизнедеятельности.</li>
                     </ul>
-
                     <p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться. Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение
                         и жизненный настрой вцелом!</p>
-
                     <h2>Спорт - гигиена тела!</h2>
-
                     <p>С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br> Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя
                         физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь, человека достигшего успеха во всех сферах, но потерявшего здоровье не называют
                         успешным.
@@ -100,16 +74,11 @@
                         не купишь! Берегите свою молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя
                         активность доступную только молодым!
                         <br></p>
-
-
-
                     <div class="choose_coach">
                         <img class="photo-box" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
                         <div class="box-container">
                             <h1>Зачем нужен тренер и как выбрать тренера ?</h1>
-
                             <p>
-
                                 Выбирая тренера - выбираешь себе путь в спорте. Один тренер приведет к желаемым результатам, а другой может испортить состояние здоровья. Как отличить специалиста от диллетанта?
                                 <ol>
                                     <li>
@@ -136,30 +105,24 @@
                                 <p>Узнать условия тренировок с тренером Вы можете на стр
                                     <a href="contacts.html"></i>Контакты</a>
                                 </p>
-
-
                                 Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
                         </div>
-
-
-
                     </div>
             </div>
         </div>
     </div>
     <div id="footer">
-
-        <div class="icons">
-            <a href="viber:+380935809669">
-                <mg class="viber" src="/icons/Viber.png" alt="+380935809669">
-            </a>
-            <a href="whatsapp:+79779886018">
-                <mg class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018">
-            </a>
+<div class="black-block">
+            <nav class="menu_footer">
+                <a href="index.html">Главная</a>
+                <a href="about_me.html">О себе</a>
+                <a href="contacts.html">Контакты</a>
+            </nav>
+            <p class="number">+380638587378</p>
             <a href="tel:+380638587378">
-                <img class="tel" src="/icons/button-telephone-icon.png" alt="+380638587378">
+                <img class="tel" src="icons/button-telephone-icon.png" alt="+380638587378">
             </a>
+            <div class="name">ARKADIY_GYM</div>
         </div>
-    </div>
-
+    </footer>
 </body>
