--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="lose weight.html">Похудеть</a>
+                        <a href="lose_weight.html">Похудеть</a>
                     </li>
                     <li>
-                        <a href="about me.html"></i>О себе</a>
+                        <a href="about_me.html"></i>О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html"></i>Контакты</a>
