--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-
 </head>
 <body>
     <header class="header">
@@ -84,6 +83,13 @@
             </a>
             <div class="name">ARKADIY_GYM</div>
         </div>
+        <form class="form">
+            <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
+            <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
+            <p><textarea name="text" id="comment" placeholder="Сообщение" class="feedback-input" cols="93" rows="5"></textarea></p>
+            <input type="submit" value="Отправить" class="button-submit">
+            <div class="ease"></div>
+        </form>
     </footer>
 </body>
 </html>
