--- a/group.html
+++ b/group.html
@@ -27,7 +27,7 @@
                             <li><a href="women.html">Тренировки для девушек</a></li>
                             <li><a href="pt.home.html">Тренер на дом</a></li>
                             <li><a href="lose_weight.html">Похудеть</a></li>
-                            <li><a href="group">Групповые тренировки</a></li>
+                            <li><a href="group.html">Групповые тренировки</a></li>
                         </ul>
                     </li>
                     <li>
