--- a/group.html
+++ b/group.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
-    <link href="block.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <script src="script.js"></script>
 </head>
 <body>
