--- a/group.html
+++ b/group.html
@@ -6,6 +6,7 @@
     <title>Спортивный блог</title>
     <link href="style.css" rel="stylesheet" />
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
     <header class="header">
