--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </span>
             <div class="case">
                 <div class="box_example">
-                    <a href="my_sites/powerboat/index.html">                    
+                    <a href="powerboat/index.html">                    
                         <img class="example" src="img/Powerboat.jpg" alt="Разработка сайтов Киев +380638587378">
                         <p class="explanation">Сайт для производителя алюминиевых лодок</p><br>
                         <p class="box_example__comment">Адаптивен под все устройства.<br> 
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="box_example">
-                    <a href="my_sites/limousin/index.html">                    
+                    <a href="limousin/index.html">                    
                         <img class="example" src="img/Limo.jpg" alt="Разработка сайтов Киев +380638587378">
                         <p class="explanation">Сайт по аренде эксклюзивных авто</p><br>
                         <p class="box_example__comment">Адаптивен под все устройства.<br> 
@@ -118,7 +118,7 @@
                     </a>
                 </div>
                 <div class="box_example">
-                    <a href="my_sites/sport-blog/index.html">                    
+                    <a href="sport-blog/index.html">                    
                         <img class="example" src="img/sport-blog.jpg" alt="Разработка сайтов Киев +380638587378">
                         <p class="explanation">Сайт для фитнес тренера</p><br>
                         <p class="box_example__comment">Адаптивен под все устройства.<br> 
