--- a/limousin/index.html
+++ b/limousin/index.html
@@ -273,7 +273,7 @@
                 <details class="more">
                     <summary>Подробнее</summary>
                     <p class="sclear">
-                        <ul>
+                        <ul class="sclear">
                             <li>+Эксклюзивный тюнинг</li>
                             <li>+белый с черной крышей</li>
                             <li>+белый кожаный салон</li>
