--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </span>
             <div class="case">
                 <div class="box_example">
-                    <a href="powerboat/index.html">                    
+                    <a href="ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZpowerboat/index.html">                    
                         <img class="example" src="img/Powerboat.jpg" alt="Разработка сайтов Киев +380638587378">
                         <p class="explanation">Сайт для производителя алюминиевых лодок</p><br>
                         <p class="box_example__comment">Адаптивен под все устройства.<br> 
