--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <li class="resume__items">-Научился применять библиотеку стилей "bootstrap"</li>
                         <li class="resume__items">-Изучил методологию БЭМ, необходимую для работы в команде</li>
                         <li class="resume__items">-Владею основными навыками Addobe Photoshop</li>
+                        <li class="resume__items">-Использую GIT и Github</li>
                     </ul></p> 
                     <h6>Навыки привлечения трафика:</h6>
                     <ul class="skills">
