--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
                         <h6>Навыки верстки:</h6>
                     <ul class="skills">
                         <li class="resume__items">-Изучил технологию адаптивной верстки HTML CSS</li>
+                        <li class="resume__items">-Использую систему контроля версий GIT и Github</li>
                         <li class="resume__items">-Изучил метод верстки по технологии CSS Grid. (Данный сайт "Портфолио" как раз написан на Grid)</li>
                         <li class="resume__items">-Научился применять библиотеку стилей "bootstrap"</li>
                         <li class="resume__items">-Изучил методологию БЭМ, необходимую для работы в команде</li>
                         <li class="resume__items">-Владею основными навыками Addobe Photoshop</li>
-                        <li class="resume__items">-Использую систему контроля версий GIT и Github</li>
+                        <li class="resume__items">-Научился скачивать и применять на сайте шрифты</li>
                     </ul></p> 
                     <h6>Навыки привлечения трафика:</h6>
                     <ul class="skills">
