--- a/powerboat/index-contacts.html
+++ b/powerboat/index-contacts.html
@@ -40,12 +40,11 @@
             </nav>
         </header>
         <main id="main">
-
 <div class="welcome">
     <div class="cell10"></div>
     <div class="cell10">
-        <div class="doch">
-            <div class="boat">
+        <div class="our_boats">
+            <div class="our_boats__boat">
                 <h2>POWERBOAT 470</h2>
                 <img class="photo_right" src="img/powerboat-470.jpg" alt="Заказать лодку 0638587378">
                 <p class="responsive">
@@ -67,8 +66,8 @@
                 </details>
             </div>
         </div>
-        <div class="doch">
-            <div class="boat">
+        <div class="our_boats">
+            <div class="our_boats__boat">
                 <h2>POWERBOAT 475</h2>
                 <img class="photo_right" src="img/maxresdefault.jpg" alt="Заказать лодку 0638587378">
                 <p class="responsive">
@@ -90,8 +89,8 @@
                 </details>
             </div>
         </div>
-        <div class="doch">
-            <div class="boat">
+        <div class="our_boats">
+            <div class="our_boats__boat">
                 <h2>POWERBOAT 420</h2>
                 <img class="photo_right" src="img/rs_4624.jpg" alt="Заказать лодку 0638587378">
                 <p class="responsive">
