--- a/powerboat/index.html
+++ b/powerboat/index.html
@@ -95,7 +95,7 @@
 
     <div class="about-us">
         <div></div>
-        <div><P>Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить
+        <div class="advantages"><P>Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить
             так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.</P></div>
         <div></div>    
     </div>
