--- a/powerboat/index-catalog.html
+++ b/powerboat/index-catalog.html
@@ -40,6 +40,7 @@
                 <div class="cell"></div>
                 <div class="cell">
                     <div class="our_boats">
+                        <a href="powerboat\POWERBOAT 470.html">                    
                         <div class="our_boats__boat">
                             <h2>POWERBOAT 470</h2>
                             <img class="photo_right" src="img/powerboat-470.jpg" alt="Заказать лодку 0638587378">
@@ -63,6 +64,7 @@
                         </div>
                     </div>
                     <div class="our_boats">
+                        <a href="powerboat\POWERBOAT 475.html">                    
                         <div class="our_boats__boat">
                             <h2>POWERBOAT 475</h2>
                             <img class="photo_right" src="img/maxresdefault.jpg" alt="Заказать лодку 0638587378">
@@ -86,6 +88,7 @@
                         </div>
                     </div>
                     <div class="our_boats">
+                        <a href="powerboat\POWERBOAT 420.html">                    
                         <div class="our_boats__boat">
                             <h2>POWERBOAT 420</h2>
                             <img class="photo_right" src="img/rs_4624.jpg" alt="Заказать лодку 0638587378">
