--- a/powerboat/index-catalog.html
+++ b/powerboat/index-catalog.html
@@ -41,7 +41,7 @@
                 <div class="cell">
                     <div class="our_boats">
                         <div class="our_boats__boat">
-                            <a href="powerboat\POWERBOAT 470.html">                  
+                            <a ref="powerboat\POWERBOAT-470.html">                  
                                 <h2>POWERBOAT 470</h2>
                                 <img class="photo_right" src="img/powerboat-470.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="our_boats">
                         <div class="our_boats__boat">
-                            <a href="powerboat\POWERBOAT 475.html">                 
+                            <a ref="powerboat\POWERBOAT-475.html">                 
                                 <h2>POWERBOAT 475</h2>
                                 <img class="photo_right" src="img/maxresdefault.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="our_boats">
                         <div class="our_boats__boat">
-                                <a href="powerboat\POWERBOAT 420.html">                    
+                                <a ref="powerboat\POWERBOAT-420.html">                    
                                 <h2>POWERBOAT 420</h2>
                                 <img class="photo_right" src="img/rs_4624.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
