--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -15,13 +15,8 @@
 </head>
 
 <body>
-
-
     <wrapper>
-
         <header id="header">
-
-
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <a class="navbar-brand">
@@ -32,23 +27,17 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Главная</a></li>
-                        <li><a href="#">Каталог</a></li>
-                        <li><a href="#">События</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="index-catalog.html">Каталог</a></li>
+                        <li><a href="index-contacts.html">Контакты</a></li>
                     </ul>
+                    <div>
+                        <h1>Лодки и катера POWERBOAT</h1>
+                    </div>
                 </div>
             </nav>
-
-
-
-
-
-
-
-
-
-
         </header>
+
+
 
         <main id="main">
             <div id="dws-slider" class="carousel slide" data-ride="carousel">
@@ -93,25 +82,22 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+        </main>
     </wrapper>
     <script>
         $('.carousel').carousel({
             interval: 6000
         })
     </script>
+    
 
     <div class="about-us">
-        <P>Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить
-            так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.</P>
+        <div></div>
+        <div class="advantages"><P>Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить
+            так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.</P></div>
+        <div></div>    
     </div>
 
-    <form class="form">
-        <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
-        <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
-        <p><textarea name="text" id="comment" placeholder="Сообщение" class="feedback-input" cols="93" rows="5"></textarea></p>
-        <input type="submit" value="Отправить" class="button-submit">
-        <div class="ease"></div>
-    </form>
 
 
 
