--- a/powerboat/index-catalog.html
+++ b/powerboat/index-catalog.html
@@ -29,9 +29,9 @@
                         <li class="active"><a href="#">Каталог</a></li>
                         <li><a href="index-contacts.html">Контакты</a></li>
                     </ul>
-                    <div>
+                    <span>
                         <h1>Лодки и катера POWERBOAT</h1>
-                    </div>
+                    </span>
                 </div>
             </nav>
         </header>
