--- a/powerboat/index-contacts.html
+++ b/powerboat/index-contacts.html
@@ -24,7 +24,8 @@
                 <div class="navbar-header">
                     <a class="navbar-brand">
                         <div class="logo">
-                            <img class="logo-boat" src="img/main_logo.svg" alt="+380638587378"></div>
+                            <img class="logo-boat" src="img/main_logo.svg" alt="+380638587378">
+                        </div>
                     </a>
                 </div>
                 <div>
@@ -33,9 +34,9 @@
                         <li><a href="index-catalog.html">Каталог</a></li>
                         <li class="active"><a href="#">Контакты</a></li>
                     </ul>
-                    <div>
+                    <span>
                         <h1>Лодки и катера POWERBOAT</h1>
-                    </div>
+                    </span>
                 </div>
             </nav>
         </header>
