--- a/powerboat/index.html
+++ b/powerboat/index.html
@@ -47,7 +47,7 @@
                 </ol>
                 <!--Обертка для слайдов-->
                 <div class="carousel-inner" role="listbox">
-                    <div class="item active"><img src="img/Zzzz.jpg" alt="Картинка 1">
+                    <div class="item active"><img src="img/POZERBOAT.jpg" alt="Картинка 1">
                         <div class="carousel-caption">
                             <h3 class="text-uppercase">POWERBOAT 470</h3>
                             <p class="specifications">КИЛЕВАТОСТЬ 14°/24° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 115 ЛС <br> МАССА 470 КГ</p>
