--- a/powerboat/index-contacts.html
+++ b/powerboat/index-contacts.html
@@ -187,9 +187,9 @@
             <div class="black-block">
                 <div id="menu_item_contacts" class="Контакты">
                     <nav class="menu footer">
-                        <a href="#index.html">Главная</a>
-                        <a href="#index-catalog.html">Каталог</a>
-                        <a href="#index-contacts.html">Контакты</a>
+                        <a href="index.html">Главная</a>
+                        <a href="index-catalog.html">Каталог</a>
+                        <a href="index-contacts.html">Контакты</a>
                     </nav>
 
                     <a href="tel:+380638587378">
