--- a/powerboat/grid.html
+++ b/powerboat/grid.html
@@ -328,10 +328,9 @@
             <div class="black-block">
                 <div id="menu_item_contacts" class="Контакты">
                     <nav class="menu footer">
-                        <a href="#menu_item_Start">Главная</a>
-                        <a href="#menu_item_Avtopark">Каталог</a>
-                        <a href="#menu_item_Usloviya">События</a>
-                        <a href="#menu_item_Akcii">Контакты</a>
+                        <a href="index.html">Главная</a>
+                        <a href="index-catalog.html">Каталог</a>
+                        <a href="index-contacts.html">Контакты</a>
                     </nav>
                     <a href="tel:+380638587378">
                         <img class="tel" src="img/main_logo.svg" alt="+380638587378">
