--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -95,7 +95,7 @@
                         </a>  
                         <h2>POWERBOAT 470</h2>  
                         <p class="responsive">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ <br>
-                            <b> POWERBOAT 475</b></p>
+                            <b> POWERBOAT 470</b></p>
                             <div class="options"></div>
                             <dl>
                                 <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
@@ -168,9 +168,9 @@
                     <div class="characteristics__models">
                         <a ref="POWERBOAT-470.html">
                         </a>                                          
-                        <h2>POWERBOAT 470</h2>
+                        <h2>POWERBOAT 470 L</h2>
                         <p class="responsive">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ <br>
-                            <b> POWERBOAT 475</b></p>
+                            <b> POWERBOAT 470 L</b></p>
                             <div class="options"></div>
                             <dl>
                                 <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
@@ -188,11 +188,11 @@
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Длина (м):</td>
-                                        <td class="numeral">4,7</td>
+                                        <td class="numeral">4,74</td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Ширина (м):</td>
-                                        <td class="numeral">1,97</td>
+                                        <td class="numeral">2,09</td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Пассажировместимость:</td>
@@ -227,12 +227,16 @@
                                         <td class="numeral">24</td>
                                     </tr>
                                     <tr class="specifications__a">
+                                        <td>Килеватость на транце:</td>
+                                        <td class="numeral">14</td>
+                                    </tr>
+                                    <tr class="specifications__a">
                                         <td>Осадка</td>
                                         <td class="numeral"></td>
                                     </tr>
                                     <tr class="specifications__a">
-                                        <td>Объем блоков плавучести:</td>
-                                        <td class="numeral"></td>
+                                        <td>Материал корпуса:</td>
+                                        <td class="numeral">5083</td>
                                     </tr>
                                 </table>
                             </div>
@@ -245,7 +249,7 @@
                         </a>                                          
                         <h2>POWERBOAT 470</h2>
                         <p class="responsive">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ <br>
-                            <b> POWERBOAT 475</b></p>
+                            <b> POWERBOAT 470</b></p>
                             <div class="options"></div>
                             <dl>
                                 <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
