--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -152,6 +152,10 @@
                                         <td class="numeral">24</td>
                                     </tr>
                                     <tr class="specifications__a">
+                                        <td>Килеватость на транце:</td>
+                                        <td class="numeral">14</td>
+                                    </tr>
+                                    <tr class="specifications__a">
                                         <td>Осадка</td>
                                         <td class="numeral"></td>
                                     </tr>
@@ -304,6 +308,10 @@
                                     <tr class="specifications__a">
                                         <td>Килеватость на миделе:</td>
                                         <td class="numeral">24</td>
+                                    </tr>
+                                    <tr class="specifications__a">
+                                        <td>Килеватость на транце:</td>
+                                        <td class="numeral">14</td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Осадка</td>
