--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -153,7 +153,7 @@
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Килеватость на транце:</td>
-                                        <td class="numeral">14</td>
+                                        <td class="numeral"></td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Осадка</td>
@@ -311,7 +311,7 @@
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Килеватость на транце:</td>
-                                        <td class="numeral">14</td>
+                                        <td class="numeral"></td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Осадка</td>
